--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>吴延彬</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta charset="utf-8">
 </head>
 <!-- swiper css -->
 <link rel="stylesheet" type="text/css" href="./css/swiper-4.1.6.min.css">
@@ -31,7 +32,7 @@
 	.swiper-slide {
 		text-align: center;
 		font-size: 18px;
-		background: #fff;
+		background: #22c3aa;
 
 		/* Center slide text vertically */
 		display: -webkit-box;
@@ -46,13 +47,42 @@
 		-ms-flex-align: center;
 		-webkit-align-items: center;
 		align-items: center;
+
+		flex-direction: column;
+	}
+	.avatar{
+		
+	}
+	.avatar img{
+		border-radius: 50%;
+		width: 200px;
+		height: 200px;
+		border: 10px solid #aee2d9;
 	}
 </style>
 <body>
 	<!-- Swiper -->
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
-			<div class="swiper-slide">Slide 1</div>
+			<div class="swiper-slide">
+				<!-- 头像 -->
+				<div class="avatar">
+					<img src="images/avatar.jpeg" width="64" height="96">
+				</div>
+				<!-- 姓名 -->
+				<div>
+					吴延彬
+				</div>
+				<div>
+					心有猛虎，细嗅蔷薇
+				</div>
+				<div>
+					前端开发工程师
+				</div>
+				<div>
+					beijingwyb@163.com
+				</div>
+			</div>
 			<div class="swiper-slide">Slide 2</div>
 			<div class="swiper-slide">Slide 3</div>
 			<div class="swiper-slide">Slide 4</div>
