--- a/index.html
+++ b/index.html
@@ -121,10 +121,18 @@
         		swiperAnimateCache(this); //隐藏动画元素 
         		swiperAnimate(this); //初始化完成开始动画
         	}, 
-        	slideChangeTransitionEnd: function(){ 
-	        	swiperAnimate(this); //每个slide切换结束时也运行当前slide动画
-	        } 
+	        	slideChangeTransitionEnd: function(){ 
+		        	swiperAnimate(this); //每个slide切换结束时也运行当前slide动画
+		    } 
 	    },
+	    // slider 切换的效果
+	    effect: 'coverflow',
+	    slidesPerView: 3,
+		centeredSlides: true,
+		// slider 切换的速度
+		speed: 1000,
+		// 开启循环
+		loop: true,
 	    direction: 'vertical',
 	    slidesPerView: 1,
 	    spaceBetween: 30,
