--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<div class="swiper-slide">
 				<!-- 头像 -->
 				<div class="avatar ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
-					<img src="images/avatar.jpeg" >
+					<img src="images/avatar2.jpeg" >
 				</div>
 				<!-- 姓名 -->
 				<div class="ani userName" swiper-animate-effect="zoomIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.0s">
